--- a/server/views/login.mustache
+++ b/server/views/login.mustache
@@ -3,31 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="icon" type="image/png" href="/favicon.png"/>
+
+  <link rel="stylesheet" href="/style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 
-<h1>OAuth server app</h1>
+<h1>OAuth server</h1>
 
 <h2>Login</h2>
 
-<div>
+<div class="content">
+  <div>
 
-  <form method="post" target="">
+    <form method="post" target="">
 
-    <label>
-      User:
-      <input name="login" type="text">
-    </label>
+      <label>
+        User:
+        <input name="login" type="text">
+      </label>
 
-    <label>
-      Password:
-      <input name="password" type="text">
-    </label>
+      <label>
+        Password:
+        <input name="password" type="text">
+      </label>
 
-    <button type="submit">Login</button>
+      <button type="submit">Login</button>
 
-  </form>
+    </form>
 
+  </div>
 </div>
 
 </body>
