--- a/server/views/main.mustache
+++ b/server/views/main.mustache
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="icon" type="image/png" href="/favicon.png"/>
+
+  <link rel="stylesheet" href="/style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 
@@ -10,20 +13,22 @@
 
 <h2>Main</h2>
 
-<div>
-  <!-- if logged -->
-  {{#user.login}}
+<div class="content">
+  <div>
+    <!-- if logged -->
+    {{#user.login}}
       <p>You are: {{user.login}}</p>
 
-      <a href="/logout">logout from auth server</a>
-  {{/user.login}}
-  <!-- else -->
-  {{^user.login}}
-      <a href="/login">login</a>
-  {{/user.login}}
+      <a class="button button-outline" href="/logout">logout from auth server</a>
+    {{/user.login}}
+    <!-- else -->
+    {{^user.login}}
+      <a class="button button-outline" href="/login">login</a>
+    {{/user.login}}
 
-  <a href="//localhost:8080">go to client app</a>
+    <a class="button button-outline" href="//localhost:8080">go to client app</a>
 
+  </div>
 </div>
 
 </body>
