--- a/server/views/authorize.mustache
+++ b/server/views/authorize.mustache
@@ -39,7 +39,7 @@
         <br>
 
         <div class="center">
-          <form method="post" target="">
+          <form method="post">
             <button class="button button-success" type="submit" name="user_allows" value="true">Yes</button>
             <button class="button button-danger" type="submit" name="user_allows" value="false">No</button>
           </form>
