--- a/server/views/main.mustache
+++ b/server/views/main.mustache
@@ -11,7 +11,7 @@
 
 <h1>OAuth server</h1>
 
-<h2>Main</h2>
+<h2>Main <a class="button float-right" href="/clients">clients</a></h2>
 
 <div class="content">
   <div>
@@ -37,7 +37,7 @@
               {{/scope}}
             </td>
             <td>
-              <a class="button button-small button-danger" href="/revoke/{{id}}">revoke</a>
+              <a class="button-small button-danger" href="/revoke/{{id}}">revoke</a>
             </td>
           </tr>
         {{/clients}}
