--- a/server/static/style.sass
+++ b/server/static/style.sass
@@ -15,6 +15,10 @@ $amber-100: #FFECB3
 $amber-200: #FFE082
 $amber-300: #FFD54F
 
+$cyan-300: #4DD0E1
+$cyan-500: #00BCD4
+$cyan-700: #0097A7
+
 $blue-grey-500: #607D8B
 $blue-grey-700: #455A64
 $blue-grey-800: #37474F
@@ -31,6 +35,9 @@ html, body
   margin: 0
   padding: 0
 
+.button
+  margin-bottom: 0
+
 .button-success
   background-color: $green-500
   border-color: $green-500
@@ -38,6 +45,14 @@ html, body
   &:hover
     background-color: $green-700
     border-color: $green-700
+
+.button-info
+  background-color: $cyan-500
+  border-color: $cyan-500
+  &:focus,
+  &:hover
+    background-color: $cyan-700
+    border-color: $cyan-700
 
 .button-danger
   background-color: $red-500
@@ -48,10 +63,12 @@ html, body
     border-color: $red-700
 
 .button-small
+  @extend .button
   font-size: .8rem
   height: 1.8rem
   line-height: 1.6rem
   padding: 0 1.5rem
+  vertical-align: text-top
 
 body
   h1, h2, h3
@@ -70,12 +87,15 @@ body
 
 .center
   display: table
-  margin: 0 auto
+  margin-left: auto
+  margin-right: auto
 
 .box
   background: #fff
   border: 1px solid $grey-300
   border-radius: 3px
+  margin-top: 1rem
+  margin-bottom: 1rem
   .box-body, .box-head
     h3
       padding: 0
@@ -96,14 +116,11 @@ table
     text-align: left
 
 .tag
-  @extend .button
+  @extend .button-small
   background-color: $amber-200
   border-color: $amber-200
   cursor: default
   color: $color-secondary
-  font-size: .8rem
-  height: 1.8rem
-  line-height: 1.6rem
   padding: 0 .5rem
   &:focus,
   &:hover
