Docker scripts & config file

--- a/client/views/main.mustache
+++ b/client/views/main.mustache
@@ -33,7 +33,7 @@
       <a class="button button-outline" href="/auth/test?scope=user notifications">login (user + notifications)</a>
     {{/user}}
 
-    <a class="button button-outline" href="//localhost:8090">go to authorization server</a>
+    <a class="button button-outline" href="//{{serverUri}}">go to authorization server</a>
 
   </div>
 </div>
