--- a/server/views/login.mustache
+++ b/server/views/login.mustache
@@ -20,12 +20,12 @@
 
       <label>
         User:
-        <input name="login" type="text">
+        <input name="login" type="text" placeholder="(can be anything)">
       </label>
 
       <label>
         Password:
-        <input name="password" type="text">
+        <input name="password" type="text" placeholder="(can be anything, not checked)">
       </label>
 
       <button type="submit">Login</button>
