--- a/server/views/main.mustache
+++ b/server/views/main.mustache
@@ -49,7 +49,7 @@
       <a class="button button-outline" href="/login">login</a>
     {{/user.login}}
 
-    <a class="button button-outline" href="//localhost:8080">go to client app</a>
+    <a class="button button-outline" href="//{{clientUri}}">go to client app</a>
 
   </div>
 </div>
