Added github ribbon

--- a/server/views/main.mustache
+++ b/server/views/main.mustache
@@ -6,8 +6,11 @@
   <link rel="icon" type="image/png" href="/favicon.png"/>
 
   <link rel="stylesheet" href="/style.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 </head>
 <body>
+<a class="github-fork-ribbon" href="https://github.com/maxx-t/oauth2-test-server/tree/docker" target="_blank"
+   style="box-sizing: content-box" title="Fork me on GitHub">Fork me on GitHub</a>
 
 <h1>OAuth server</h1>
 
